deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: latamairlines
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: fastapi:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
