resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: latamairlines
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: latamairlines
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: us-east1-docker.pkg.dev/clusterla/latamimages/fastapi:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "512Mi"
            cpu: "1250m"
          limits:
            memory: "1024Mi"
            cpu: "1500m"
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: mi-aplicacion-servicio
  namespace: latamairlines
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
