service.yml
apiVersion: v1
kind: Service
metadata:
  name: mi-aplicacion-servicio
  namespace: latamairlines
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
